--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
             apt-get install -y build-essential cmake git libhdf5-dev libvtk9-dev \
                                libboost-all-dev libcgal-dev libtinyxml-dev \
                                qtbase5-dev libvtk9-qt-dev octave \
-                               python3-setuptools python3-numpy python3-numpy-dev \
+                               python3-setuptools python3-numpy \
                                python3-matplotlib cython3 python3-h5py
           else
             echo "Unknown system!"
