CMakeLists.txt: hack
Signed-off-by: Yifeng Li <tomli@tomli.me>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,7 +134,10 @@ message(STATUS "Boost_LIBRARIES: ${Boost_LIBRARIES}")
 INCLUDE_DIRECTORIES (${Boost_INCLUDE_DIRS})
 
 # vtk
-find_package(VTK COMPONENTS CommonCore NO_MODULE QUIET)
+# This is not the correct solution as vtkCommonCore will be
+# removed in the future... For now, it'n only for setting CI/CD
+# up...
+find_package(VTK COMPONENTS vtkCommonCore NO_MODULE QUIET)
 if (${VTK_VERSION} VERSION_GREATER "9")
     find_package(VTK REQUIRED COMPONENTS IOXML IOGeometry IOLegacy IOPLY NO_MODULE REQUIRED)
 else()
